--- a/style.css
+++ b/style.css
@@ -26,6 +26,110 @@ html {
     text-shadow: .3rem .3rem .3rem #000;
 }
 
+/* Navbar */
+
+.navbar {
+    width: 100%;
+    height: 14rem;
+    background: #000;
+    position: fixed;
+    top: -14rem;
+    z-index: 2;
+    box-shadow: .2rem .2rem .2rem #000;
+    transition: top .4s;
+}
+
+.navbar.change {
+    top: 0;
+    transition: top .4s .2s;
+}
+
+.navbar ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.navbar-link {
+    color: #aaa;
+    margin: 0 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: color .3s, opacity .2s;
+}
+
+.change li .navbar-link {
+    opacity: 1;
+}
+
+.change li:nth-child(1) .navbar-link {
+    transition: opacity .4s .5s, color .3s;
+}
+
+.change li:nth-child(2) .navbar-link {
+    transition: opacity .4s .6s, color .3s;
+}
+
+.change li:nth-child(3) .navbar-link {
+    transition: opacity .4s .7s, color .3s;
+}
+
+.change li:nth-child(4) .navbar-link {
+    transition: opacity .4s .8s, color .3s;
+}
+
+.change li:nth-child(5) .navbar-link {
+    transition: opacity .4s .9s, color .3s;
+}
+
+.navbar-link:hover {
+    color: #fff;
+}
+
+.navbar-link i {
+    font-size: 7rem;
+}
+
+.navbar-link span {
+    font-size: 2.5rem;
+    font-weight: 900;
+    letter-spacing: .5rem;
+    margin-top: .5rem;
+}
+
+.menu {
+    width: 4rem;
+    height: 6rem;
+    background: #000;
+    position: fixed;
+    top: 1rem;
+    left: 5rem;
+    border-radius: 30rem 30rem 15rem 15rem;
+    box-shadow: .1rem .1rem .1rem #000, -.1rem -.1rem .1rem #000;
+    cursor: pointer;
+    transition: top .4s .2s;
+}
+
+.menu.change {
+    top: 15rem;
+    transition: top .4s;
+}
+
+.menu::before {
+    content: "";
+    height: 15rem;
+    width: .3rem;
+    background: #000;
+    position: absolute;
+    top: -15rem;
+    left: calc(50% - .15rem);
+    box-shadow: .1rem 0 .1rem #000;
+}
+
 /* Section 1 */
 
 .section-1 {
@@ -168,7 +272,7 @@ html {
     position: absolute;
     top: 2vw;
     left: 80%;
-    z-index: 10;
+    z-index: 1;
     width: .2rem;
     height: 0;
     background: #fff;
@@ -245,4 +349,78 @@ html {
 .gallery-link:hover .food-description {
     opacity: 1;
     transition: opacity 1s 1s;
+}
+
+/* Section 4 */
+
+.section-4 {
+    width: 100%;
+    height: 30vh;
+    background: #222;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 3rem 0;
+    position: relative;
+}
+
+.section-4-text {
+    text-transform: uppercase;
+}
+
+.section-4-heading {
+    font-size: 4rem;
+    font-weight: 900;
+    color: #a79a2d;
+}
+
+.section-4-paragraph {
+    font-size: 1.5rem;
+    color: #888;
+}
+
+.signup-form {
+    display: flex;
+    align-items: center;
+}
+
+.signup-form-input {
+    width: 35rem;
+    height: 5rem;
+    padding: 1rem;
+    padding-right: 5rem;
+    border: .2rem solid #a79a2d;
+    font-size: 1.6rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    color: #a79a2d;
+}
+
+.signup-form-input::placeholder {
+    color: #a79a2d;
+}
+
+.signup-form-btn {
+    position: relative;
+    left: -4.5rem;
+    width: 4rem;
+    height: 4rem;
+    background: #333;
+    color: #a79a2d;
+    border: none;
+    font-size: 1.8rem;
+    cursor: pointer;
+}
+
+.copyright {
+    position: absolute;
+    bottom: 3rem;
+    font-size: 1.7rem;
+    font-weight: 200;
+    color: #eee;
+    letter-spacing: .1rem;
+    border-top: .1rem solid #888;
+    padding-top: 6rem;
+    width: 100%;
+    text-align: center;
 }
