--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html {
     background: #000;
     position: fixed;
     top: -14rem;
-    z-index: 2;
+    z-index: 3;
     box-shadow: .2rem .2rem .2rem #000;
     transition: top .4s;
 }
@@ -112,6 +112,7 @@ html {
     box-shadow: .1rem .1rem .1rem #000, -.1rem -.1rem .1rem #000;
     cursor: pointer;
     transition: top .4s .2s;
+    z-index: 2;
 }
 
 .menu.change {
@@ -423,4 +424,105 @@ html {
     padding-top: 6rem;
     width: 100%;
     text-align: center;
+}
+
+/* Media Queries */
+
+@media(max-width: 1400px) {
+    html {
+        font-size: 50%;
+    }
+
+    .section-2 {
+        height: auto;
+        padding: 10rem 0 12rem 0;
+    }
+
+    .cards-container {
+        margin-top: 10rem;
+    }
+
+    .gallery-link {
+        width: 40rem;
+        height: 25rem;
+        margin: 5rem;
+    }
+
+    .food-img {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media(max-width: 992px) {
+    .section-heading {
+        font-size: 9rem;
+        margin: 0 5rem;
+    }
+
+    .section-1-icons i {
+        font-size: 25rem;
+    }
+
+    .cards-container {
+        flex-wrap: wrap;
+    }
+
+    .card {
+        margin: 5rem;
+    }
+
+    .section-4 {
+        height: 30rem;
+    }
+}
+
+@media(max-width: 900px) {
+    .navbar-link {
+        margin: 2rem;
+    }
+
+    .navbar-link i {
+        font-size: 4rem;
+    }
+
+    .navbar-link span {
+        font-size: 2rem;
+    }
+}
+
+@media(max-width: 700px) {
+    .section-heading {
+        font-size: 7rem;
+        margin: 0 10rem;
+    }
+
+    .section-1-icons {
+        font-size: 20rem;
+    }
+
+    .menu {
+        left: 2rem;
+    }
+
+    .section-4 {
+        height: 40rem;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .section-4-text {
+        margin-bottom: 8rem;
+    }
+}
+
+@media(max-width: 576px) {
+    html {
+        font-size: 40%;
+    }
+
+    .navbar-link {
+        margin: 0 .7rem;
+    }
 }
